<resources>
    <string name="app_name">app_electroh</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txt_ingresar">Ingresar</string>
    <string name="txt_email">Correo</string>
    <string name="txt_password">*****</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="txt_loading">Espere...</string>
    <string name="item_cerrar">Cerrar sesión</string>
    <string name="txt_codigo">#</string>
    <string name="txt_estado">Estado</string>
    <string name="txt_nombre">Nombres</string>
    <string name="txt_apellido">Apellidos</string>
    <string name="txt_fechaNac">Fecha nacimiento</string>
    <string name="txt_cedula">Cédula</string>
    <string name="txt_correo">Correo</string>
    <string name="txt_activo">Activo</string>
    <string name="txt_inactivo">Inactivo</string>
    <string name="item_persona">Gestión trabajador</string>
    <string name="txt_descripcion">DESCRIPCIÓN</string>
    <string name="txt_null">\@null</string>
    <string name="txt_fase">FASE</string>
    <string name="rb_activo">Activo</string>
    <string name="rb_inactivo">Inactivo</string>
    <string name="txt_vista">Vista</string>
    <string name="txt_modificar">Modificar</string>
    <string name="txt_eliminar">Eliminar</string>
    <string name="txt_msj_delete">Desea eliminar ?</string>
    <string name="txt_si">Si</string>
    <string name="txt_no">No</string>
    <string name="item_fase">Gestión fase</string>
    <string name="txt_fecha">Fecha</string>
    <string name="txt_proyecto">Proyecto</string>
    <string name="txt_duracion">Duración</string>
    <string name="txt_calculo">0</string>
    <string name="item_proyecto">Proyecto</string>
    <string name="item_proyecto_add">Agregar proyecto</string>
    <string name="item_proyecto_asign">Asignar proyecto</string>
    <string name="item_proyecto_approve">Control de proyecto</string>
    <string name="txt_fechaInicio">F. Inicio</string>
    <string name="txt_fechaFin">F. Fin</string>
    <string name="txt_asignacion">ASIGNACIÓN</string>
    <string name="txt_actividad">ACTIVIDAD</string>
    <string name="txt_observacion">OBSERVACION</string>
    <string name="item_proyecto_activity">Registro actividad</string>
    <string name="txt_grupo">GRUPO</string>
    <string name="txt_producto">Material</string>
    <string name="item_producto">Gestión materiales</string>
    <string name="txt_confirmacion">Mensaje confirmación</string>
    <string name="txt_roles">Roles</string>
    <string name="item_usuario">Gestión usuario</string>
    <string name="txt_imprmir">IMPRIMIR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_cliente">Gestión cliente</string>
    <string name="item_trabajador">Gestión trabajador</string>
    <string name="txt_cliente">Cliente</string>
    <string name="item_grupo">Gestión grupo</string>
    <string name="txt_natural">Cédula</string>
    <string name="txt_razonS">Ruc</string>
    <string name="txt_telefono">Teléfono</string>
    <string name="txt_total">Total</string>
    <string name="txt_cantidad">CANT.</string>
    <string name="txt_comentario">Comentar</string>
</resources>