<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/ic_check_circle_outline_24"
        app:tint="@color/blue200" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_confirmacion"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/cardview_dark_background"
        />

    <TextView
        android:id="@+id/txtMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_descripcion"
        android:textAlignment="center"
        android:textSize="12sp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/padding_12dp">
        <Button
            android:id="@+id/bnSi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_si"
            android:layout_margin="@dimen/margin_12dp"
            android:textSize="10dp"
            android:textStyle="bold"
            android:backgroundTint="@color/blue"/>

        <Button
            android:id="@+id/bnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_12dp"
            android:text="@string/txt_no"
            android:textSize="10dp"
            android:textStyle="bold"
            android:backgroundTint="@android:color/darker_gray"/>

    </GridLayout>
</LinearLayout>