<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/txt_producto"
        android:textStyle="bold"
        android:textSize="@dimen/text_size14"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        android:background="@color/gray500"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_default"
        android:paddingTop="@dimen/padding_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
    android:orientation="vertical">

        <!--ROW 1-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cbGrupo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:hint="@string/txt_grupo"
            app:errorEnabled="true">
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="@dimen/text_size_default"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--ROW 2-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDescripcion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="250"
            app:counterTextColor="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_edit_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_descripcion"
                android:inputType="text"
                android:maxLength="200" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtTotal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterTextColor="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_edit_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_total"
                android:inputType="number"
                android:maxLength="200" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--ROW 2-->
        <RadioGroup
            android:id="@+id/rbGroupEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/rbActivo"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <RadioButton
                android:id="@+id/rbActivo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rb_activo"
                android:textSize="@dimen/text_size_default"
                android:theme="@style/Widget.AppCompat.CompoundButton.RadioButton" />

            <RadioButton

                android:id="@+id/rbInactivo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rb_inactivo"
                android:textSize="12sp"
                android:theme="@style/Widget.AppCompat.CompoundButton.RadioButton" />
        </RadioGroup>

        <!--ROW 3-->
        <LinearLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_default">
            <Button
                android:id="@+id/bnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Guarcar"
                android:textStyle="bold" />
            <Button
                android:id="@+id/bnCancelar"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancelar"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>