<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mantenimientos.GrupoFragment">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="LISTADO"
        android:textSize="@dimen/size_text16"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="@dimen/margin_default"
        android:src="@drawable/ic_add_24"
        app:backgroundTint="@color/gray500"
        app:elevation="16dp"
        android:tooltipText="Agregar persona"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/white" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fbAdd"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue">
            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="0.8"
                android:gravity="center"
                android:text="@string/txt_codigo"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/txt_descripcion"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1.3"
                android:gravity="center"
                android:text="@string/txt_estado"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text16"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="0.8"/>
        </TableRow>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerGrupo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </TableLayout>



</androidx.constraintlayout.widget.ConstraintLayout>